--- a/Out of Business Cards/app/src/main/res/values/strings.xml
+++ b/Out of Business Cards/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="fax_hint">FAX</string>
     <string name="save_text">保存</string>
     <string name="cancel_text">キャンセル</string>
+    <string name="edit_text">編集</string>
 </resources>
